// This is your Prisma schema file,
// learn more about it in the docs: https://pris.ly/d/prisma-schema

generator client {
  provider = "prisma-client"
  output   = "../src/generated/prisma"
}

datasource db {
  provider = "sqlite"
}

// ─── User (students, drivers, admin) ─────────────────────────────────────────

model User {
  id              String   @id @default(cuid())
  name            String
  email           String?  @unique
  isEmailVerified Boolean  @default(false)
  emailVerifiedAt DateTime?
  passwordHash    String
  role            String   // "student" | "driver" | "admin"
  createdAt       DateTime @default(now())
  updatedAt       DateTime @updatedAt

  // Student fields
  rollNumber      String?  @unique
  assignedRouteId String?
  phoneNumber     String?
  address         String?
  fcmToken        String?  // Firebase Cloud Messaging token for push notifications

  // Driver fields
  employeeId      String?  @unique
  assignedBusId   String?
  licenseNumber   String?
  licenseExpiry   DateTime?

  reports         Report[]
  busPassApps     BusPassApplication[]
  boardingLogs    BoardingLog[]
  passwordResets  PasswordResetToken[]
  emailOtps       EmailVerificationOtp[]

  @@index([role])
  @@index([createdAt])
  @@index([assignedRouteId])
  @@index([fcmToken])
}

// ─── Bus Route ────────────────────────────────────────────────────────────────

model BusRoute {
  id                String   @id @default(cuid())
  name              String
  label             String
  color             String
  area              String
  morningDeparture  String
  eveningDeparture  String
  estimatedDuration String
  stopsJson         String   // JSON array of RouteStop
  waypointsJson     String   // JSON array of LatLng
  active            Boolean  @default(true)
  createdAt         DateTime @default(now())

  buses             Bus[]
  trips             Trip[]
  boardingLogs      BoardingLog[]
}

// ─── Bus ─────────────────────────────────────────────────────────────────────

model Bus {
  id           String    @id @default(cuid())
  plateNumber  String    @unique
  model        String
  capacity     Int
  status       String    @default("idle")
  routeId      String?
  driverId     String?
  heading      Float?
  speed        Float?
  currentLat   Float?
  currentLng   Float?
  lastUpdated  DateTime?
  createdAt    DateTime  @default(now())

  route        BusRoute? @relation(fields: [routeId], references: [id])
  trips        Trip[]
  boardingLogs BoardingLog[]
  locations    BusLocation[]

  @@index([routeId])
  @@index([status])
  @@index([driverId])
}

// ─── Trip ─────────────────────────────────────────────────────────────────────

model Trip {
  id        String    @id @default(cuid())
  busId     String
  driverId  String
  routeId   String
  startTime DateTime
  endTime   DateTime?
  status    String    @default("active") // "active" | "completed" | "cancelled"
  direction String    // "morning" | "evening"
  createdAt DateTime  @default(now())

  bus          Bus          @relation(fields: [busId], references: [id])
  route        BusRoute     @relation(fields: [routeId], references: [id])
  boardingLogs BoardingLog[]

  @@index([busId])
  @@index([driverId])
  @@index([routeId])
  @@index([status])
  @@index([startTime])
}

// ─── Notification ─────────────────────────────────────────────────────────────

model Notification {
  id         String   @id @default(cuid())
  title      String
  message    String
  type       String   // "info" | "warning" | "delay" | "arrival" | "system"
  targetRole String?  // "all" | "student" | "driver" | "admin"
  routeId    String?
  read       Boolean  @default(false)
  createdAt  DateTime @default(now())

  @@index([createdAt])
  @@index([targetRole])
  @@index([read])
}

// ─── Report ───────────────────────────────────────────────────────────────────

model Report {
  id          String   @id @default(cuid())
  studentId   String
  busId       String?
  routeId     String?
  type        String   // ReportType
  description String
  status      String   @default("pending") // "pending" | "resolved" | "dismissed"
  createdAt   DateTime @default(now())

  student     User     @relation(fields: [studentId], references: [id])

  @@index([studentId])
  @@index([status])
  @@index([createdAt])
}

// ─── Bus Pass Application ─────────────────────────────────────────────────────

model BusPassApplication {
  id          String    @id @default(cuid())
  studentId   String
  routeId     String
  semester    String    // e.g., "Spring 2025"
  status      String    @default("pending") // "pending" | "approved" | "rejected"
  feeStatus   String    @default("unpaid") // "unpaid" | "paid"
  feeAmount   Float     @default(5000)
  appliedAt   DateTime  @default(now())
  reviewedAt  DateTime?
  validFrom   DateTime?
  validTo     DateTime?
  notes       String?

  student     User      @relation(fields: [studentId], references: [id])

  @@index([studentId])
  @@index([status])
  @@index([feeStatus])
}

// ─── Boarding Log ─────────────────────────────────────────────────────────────

model BoardingLog {
  id        String   @id @default(cuid())
  studentId String
  busId     String
  routeId   String
  tripId    String?
  boardedAt DateTime @default(now())

  student   User     @relation(fields: [studentId], references: [id])
  bus       Bus      @relation(fields: [busId], references: [id])
  route     BusRoute @relation(fields: [routeId], references: [id])
  trip      Trip?    @relation(fields: [tripId], references: [id])

  @@index([studentId])
  @@index([busId])
  @@index([tripId])
  @@index([boardedAt])
}

// ─── Auth Recovery ───────────────────────────────────────────────────────────

model PasswordResetToken {
  id         String   @id @default(cuid())
  tokenHash  String   @unique
  userId     String
  user       User     @relation(fields: [userId], references: [id], onDelete: Cascade)
  expiresAt  DateTime
  usedAt     DateTime?
  createdAt  DateTime @default(now())
}

model PasswordResetRequest {
  id         String   @id @default(cuid())
  identifier String
  ipAddress  String
  createdAt  DateTime @default(now())
}

model EmailVerificationOtp {
  id        String   @id @default(cuid())
  userId    String
  user      User     @relation(fields: [userId], references: [id], onDelete: Cascade)
  otpHash   String
  expiresAt DateTime
  attempts  Int      @default(0)
  usedAt    DateTime?
  createdAt DateTime @default(now())

  @@index([userId, createdAt])
  @@index([expiresAt])
}

// ─── Bus Location History ─────────────────────────────────────────────────────

model BusLocation {
  id        String   @id @default(cuid())
  busId     String
  lat       Float
  lng       Float
  heading   Float?
  speed     Float?
  timestamp DateTime @default(now())

  bus       Bus      @relation(fields: [busId], references: [id])

  @@index([busId, timestamp])
  @@index([timestamp])
}
